# page-loader

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint and test.yml
page_loader/: __init__.py  app_logger.py  cli.py  file_actions.py  name_creator.py  page_loader.py  resources.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_download.py  test_exceptions.py  test_get_html.py  test_get_pics.py
tests/fixtures/: application.css  django-fun-python-ispolzovanie-requests-v-python-tajm-auty-povtory-huki-.html  hexlet.html  hexlet_pic.html  hexlet_result.html  no_tags.html  no_tags_result.html
